.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b2 - Unreleased
------------------

- Reverted default message for description_group_members_of in
  plone_deprecated/prefs_group_members.cpt
  [vincentfretin]

- Fixed help_biography message.
  [vincentfretin]

- Internationalized the backup-warning message in plone-upgrade.pt.
  [vincentfretin]


4.0b1 - 2010-03-08
------------------

- "Event when" improved for better i18n.  
   This closes http://dev.plone.org/plone/ticket/10196
   [gotcha]

- Adjust the tests now that `DateTime` objects are stored with a time zone.
  Refs http://dev.plone.org/plone/ticket/10141
  [witsch]

- Fix issues with sliding modification/publishing dates by using `DateTime`'s
  `ISO8601` method instead of `ISO`, which doesn't include time zones.
  Refs http://dev.plone.org/plone/ticket/10140, 10141 & 10171.
  [davisagli, witsch]

- Set the 'context' context on Plone expression contexts, which is needed for
  resolving UnicodeDecodeErrors when evaluating expressions.
  [davisagli]

- Added optional batchformkeys parameter to batch_macros.pt to restrict which
  form fields will be included in batch navigation links (for immediate use
  in plone.app.controlpanel's user and groups listsings).
  [cah190]

- Added markup to give styling to document ByLine in folder_summary_view.
  This fixes http://dev.plone.org/plone/ticket/6094
  [dunlapm]

- Add an HTML id to the "add group" form.
  [stuttle]

- Moved the tal:condition from the <img> tag to <a> tag in folder_summary_view, 
  to remove unnecessary empty <a> tags when no image exists.
  References http://dev.plone.org/plone/ticket/10251
  [miguelitosm]

- Removed the 'ListFolderContents' permission from all workflows and limit the
  default permission to Manager, Owner, Reviewer, Editor and Contributor.