@@ -8,6 +8,11 @@ Changelog
 4.0b2 - Unreleased
 ------------------
 
+- Fixed plone_scripts/translate.py to use translation_service.translate
+  method. translation_service.utranslate was removed in recent version of
+  PlacelessTranslationService.
+  [vincentfretin]
+
 - Reverted default message for description_group_members_of in
   plone_deprecated/prefs_group_members.cpt
   [vincentfretin]
